// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteImage renders renders the normal state 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Array [
          Object {
            "flex": 1,
            "height": 200,
          },
          undefined,
          undefined,
        ],
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <FastImageView
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      onFastImageLoadStart={[Function]}
      resizeMode="cover"
      source={
        Object {
          "uri": "https://homepages.cae.wisc.edu/~ece533/images/airplane.png",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`RemoteImage renders renders with minimum required props 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Array [
          Object {
            "flex": 1,
            "height": 200,
          },
          undefined,
          undefined,
        ],
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <FastImageView
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      onFastImageLoadStart={[Function]}
      resizeMode="cover"
      source={null}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;
